--- a/app/src/main/res/layout/fragment_random.xml
+++ b/app/src/main/res/layout/fragment_random.xml
@@ -1,14 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.RandomFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:baselineAligned="false"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvWord"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:background="#D7FAFF"
+                android:backgroundTintMode="add"
+                android:gravity="bottom"
+                android:maxLines="1"
+                android:shadowRadius="5"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="#BC000000"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                tools:text="Chosen Word" />
+
+            <TextView
+                android:id="@+id/tvDefinition"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:background="#DDD3FF"
+                android:lineSpacingExtra="8sp"
+                android:padding="20dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="24sp"
+                tools:text="This is a sample definition for a randomly chosen word." />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#DDD3FF"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btnRandom"
+                android:background="@android:color/white"
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:layout_marginLeft="100dp"
+                android:layout_marginRight="100dp"
+                android:forceDarkAllowed="false"
+                android:text="New Word"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </FrameLayout>
