--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -27,16 +27,19 @@
                 android:layout_marginBottom="25dp"
                 android:gravity="bottom"
                 android:hint="Word"
-                android:singleLine="true" />
+                android:maxLines="1"
+                android:textSize="18sp" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
+
                 android:id="@+id/btnSearch"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="100dp"
                 android:layout_marginRight="100dp"
-                android:layout_marginBottom="25dp"
+                android:layout_marginBottom="50dp"
                 android:layout_weight="1"
+                android:background="#DDD3FF"
                 android:text="Search Definition"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
